[gd_scene load_steps=7 format=3 uid="uid://oaxce7kcotie"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorSetNode.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorGraphNodeBase.tscn" id="2"]
[ext_resource type="StyleBox" uid="uid://bie6450rn7l44" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node.tres" id="2_jcxhc"]
[ext_resource type="PackedScene" uid="uid://c1584iplg8kg5" path="res://addons/hyh.cutscene_graph/editor/controls/VariableValueEditControl.tscn" id="3"]
[ext_resource type="StyleBox" uid="uid://oujfit2l7l4s" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node_selected.tres" id="3_5vwt0"]
[ext_resource type="PackedScene" uid="uid://c31q0dbk4i25w" path="res://addons/hyh.cutscene_graph/editor/controls/VariableSelectionControl.tscn" id="5_pyyww"]

[node name="EditorSetNode" instance=ExtResource("2")]
offset_right = 399.0
offset_bottom = 113.0
theme_override_styles/frame = ExtResource("2_jcxhc")
theme_override_styles/selected_frame = ExtResource("3_5vwt0")
title = "Set Variable"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer" index="0"]
layout_mode = 2
text = "Variable:"

[node name="VariableSelectionControl" parent="MarginContainer/GridContainer" index="1" instance=ExtResource("5_pyyww")]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/GridContainer" index="2"]
layout_mode = 2
text = "Value:"

[node name="ValueEdit" parent="MarginContainer/GridContainer" index="3" instance=ExtResource("3")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="variable_selected" from="MarginContainer/GridContainer/VariableSelectionControl" to="." method="_on_variable_selection_control_variable_selected"]
[connection signal="value_changed" from="MarginContainer/GridContainer/ValueEdit" to="." method="_on_ValueEdit_value_changed"]
